--- a/budget_section.html
+++ b/budget_section.html
@@ -360,6 +360,7 @@
             <h4>Total Actual Spent</h4>
             <div class="kpi-value">
                 <span id="total-actual-spent">$ 0</span>
+                <div id="labor-cost-info" style="font-size:1rem; color:#affbff; margin-top:6px; font-weight:500;"></div>
             </div>
         </div>
         <div class="summary-card kpi-card">
@@ -529,6 +530,8 @@
 
         // 2) Total Actual Spent (use financial-summary breakdown for month)
         let actualSpent = 0;
+        let laborCost = 0;
+        let latestLaborCost = null;
         try {
             const sumRes = await fetch(`${API_BASE}/api/financial-summary?start_date=${start}&end_date=${end}`);
             if (sumRes.ok) {
@@ -536,11 +539,40 @@
                 const breakdown = data.breakdown || {};
                 const cogs = parseFloat(breakdown.cogs || 0);
                 const operating = parseFloat(breakdown.operating || 0);
-                const payroll = parseFloat(breakdown.payroll || 0);
-                actualSpent = cogs + operating + payroll;
+                laborCost = parseFloat(breakdown.payroll || 0);
+                actualSpent = cogs + operating;
             }
         } catch (e) { console.error('Failed to load financial summary:', e); }
+
+        // Fetch sum of labor cost entries from admin for the selected month onlyz
+        let laborCostSum = null;
+        try {
+            const sumLaborRes = await fetch(`${API_BASE}/api/sum-labor-cost?month=${month}`);
+            if (sumLaborRes.ok) {
+                const sumLaborData = await sumLaborRes.json();
+                if (sumLaborData.labor_cost_sum !== null && !isNaN(sumLaborData.labor_cost_sum)) {
+                    laborCostSum = parseFloat(sumLaborData.labor_cost_sum);
+                }
+            }
+        } catch (e) { console.error('Failed to load sum labor cost:', e); }
+
+        // Prefer laborCost (payroll sum for month) if available, else admin sum for this month
+        let showValue = null;
+        if (laborCost !== 0) {
+            showValue = laborCost;
+        } else if (laborCostSum !== null && laborCostSum !== 0) {
+            showValue = laborCostSum;
+        }
+
         elActual.innerText = `$ ${actualSpent.toLocaleString()}`;
+        const laborInfo = document.getElementById('labor-cost-info');
+        if (laborInfo) {
+            if (showValue !== null) {
+                laborInfo.innerText = `Labor Cost: $ ${showValue.toLocaleString()}`;
+            } else {
+                laborInfo.innerText = '';
+            }
+        }
 
         // 3) Variance
         const variance = totalBudgeted - actualSpent;
@@ -660,7 +692,7 @@
                     (entries || []).forEach(e => {
                         const subcat = (e.subcategory != null && String(e.subcategory).trim() !== '') ? String(e.subcategory).trim() : null;
                         if (!subcat) return;
-                        const catRaw = (e.category != null) ? String(e.category).trim() : '';
+                        const catRaw = (e.category != null) ? String(e.category).trim().toLowerCase() : '';
                         const key = `${catRaw.toLowerCase()}||${subcat}`;
                         budgetMap[key] = (budgetMap[key] || 0) + Number(e.budgeted || 0);
                     });
@@ -969,4 +1001,3 @@
 
 </body>
 </html>
-
