--- a/budget_section.html
+++ b/budget_section.html
@@ -357,7 +357,7 @@
             </div>
         </div>
         <div class="summary-card kpi-card">
-            <h4>Total Actual Spent</h4>
+            <h4>Total Actual Spent(COGS + OPEX)</h4>
             <div class="kpi-value">
                 <span id="total-actual-spent">$ 0</span>
                 <div id="labor-cost-info" style="font-size:1rem; color:#affbff; margin-top:6px; font-weight:500;"></div>
