--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
             </header>
             <div class="card-grid">
                 <div class="summary-card dark-espresso" id="balance-card"><h4>Current Balance</h4><p id="card-remaining">$0</p></div>
-                <div class="summary-card caramel-brown"><h4>Total Expenses</h4><p id="card-total">$0</p></div>
                 <div class="summary-card mocha-light"><h4>Total Income</h4><p id="card-income">$0</p></div>
+                <div class="summary-card caramel-brown"><h4>Total Expenses</h4><p id="card-total">$0</p></div>
                 <div class="summary-card mocha-light"><h4>Budget</h4><p id="total-budgeted">$0</p></div>
                 
             </div>
             <div class="table-container">
-                <h3>Recent Activity</h3>
+                <h3>Current Month Transactions</h3>
                 <table>
                     <thead><tr><th>Description</th><th>Category</th><th>Date</th><th>Amount</th></tr></thead>
                     <tbody id="expense-rows"></tbody>
